6.7 Added ForumStatistics class and interface. All without tests